[package]
name = "ruver"
version = "0.0.1"
edition = "2018"

[dependencies]
axum = { version = "0.4.3" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
